--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@astrojs/mdx": "^4.0.6",
     "@astrojs/partytown": "^2.1.3",
     "@astrojs/react": "^4.1.5",
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.1.7",
+    "framer-motion": "^11.18.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-toc": "^9.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
