--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.1.7",
-    "framer-motion": "^11.18.1",
+    "clsx": "^2.1.1",
+    "motion": "^11.18.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-toc": "^9.0.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
