--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "astro": "^5.1.7",
+    "astro-icon": "^1.1.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.473.0",
     "motion": "^11.18.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -28,7 +33,8 @@
     "rehype-slug": "^6.0.0",
     "remark-toc": "^9.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "prettier": "^3.4.2",
