--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.4",
-    "@astrojs/vercel": "^8.0.3",
     "@nanostores/react": "^0.8.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "@vercel/analytics": "^1.4.1",
     "astro": "^5.1.7",
     "astro-icon": "^1.1.5",
     "class-variance-authority": "^0.7.1",
